<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/tommie">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:textSize="30sp"
        android:textIsSelectable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtHeight"
        android:textSize="24sp"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp"
        android:layout_alignRight="@+id/txtPerimeter"
        android:layout_alignEnd="@+id/txtPerimeter"
        android:hint="@string/txtHeight" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtPerimeter"
        android:textSize="24sp"
        android:hint="@string/txtPerimeter"
        android:textIsSelectable="true"
        android:layout_below="@+id/txtHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGroup"
        android:prompt="@string/prompt"
        android:entries="@array/txtGroup"
        android:layout_below="@+id/txtPerimeter"
        android:layout_alignLeft="@+id/txtPerimeter"
        android:layout_alignStart="@+id/txtPerimeter" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCost"
        android:id="@+id/btnCost"
        android:textSize="23sp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/txtTitle"
        android:layout_alignStart="@+id/txtTitle"
        android:layout_marginBottom="63dp" /><![CDATA[

    ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paintcan"
        android:src="@drawable/paintcan"
        android:layout_below="@+id/txtGroup"
        android:layout_alignRight="@+id/txtGroup"
        android:layout_alignEnd="@+id/txtGroup" />

    ]]>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgpaint"
        android:src="@drawable/paint"
        android:layout_below="@+id/txtGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="22sp" />

</RelativeLayout>
